--- a/demos/RpsConsole2/.vscode/launch.json
+++ b/demos/RpsConsole2/.vscode/launch.json
@@ -14,7 +14,7 @@
       "args": [],
       "cwd": "${workspaceFolder}",
       // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-      "console": "internalConsole",
+      "console": "integratedTerminal", // you have to change this from 'internalConsole' to be able to type input to th econsole.
       "stopAtEntry": false
     },
     {
