--- a/demos/RpsConsoleApp/BusinessLayer/BusinessLayer.csproj
+++ b/demos/RpsConsoleApp/BusinessLayer/BusinessLayer.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RepoLayer\RepoLayer.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
