Update yamlDemo.yml for Azure Pipelines

--- a/yamlDemo.yml
+++ b/yamlDemo.yml
@@ -9,6 +9,10 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+MyObj:
+  container: "Jim"
+  notacontainer: 'jerry'
+
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
@@ -17,3 +21,6 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+
+- script: echo $(MyObj.container) is not $(MyObj.notacontainer).
