--- a/yamlDemo.yml
+++ b/yamlDemo.yml
@@ -10,29 +10,8 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  container:
-    test: test
-    num: 1
-  notacontainer: 'jerry'
-
-  doe: "a deer, a female deer"
-  ray: "a drop of golden sun"
-  pi: 3.14159
-  xmas: true
-  french-hens: 3
-  calling-birds:
-   - huey
-   - dewey
-   - louie
-   - fred
-  xmas-fifth-day:
-   calling-birds: four
-   french-hens: 3
-   golden-rings: 5
-   partridges:
-     count: 1
-     location: "a pear tree"
-   turtle-doves: two
+- name: one
+  value: initialValue 
 
 steps:
 - script: echo Hello, world!
@@ -43,5 +22,14 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-
-- script: echo $(container.test) is not $(Build.BuildId).
+- script: |
+    # outputs initialValue
+    echo ${{ variables.one }} 
+    echo $(one)
+  displayName: First variable pass
+- bash: echo "##vso[task.setvariable variable=one]secondValue"
+  displayName: Set new variable value
+- script: |
+    echo ${{ variables.one }} # outputs initialValue
+    echo $(one) # outputs secondValue
+  displayName: Second variable pass
