--- a/yamlDemo.yml
+++ b/yamlDemo.yml
@@ -11,25 +11,13 @@ pool:
 
 variables:
 - name: one
-  value: initialValue 
+  value: initialValue
+- name: environ
+  value: "It's a dev environ"
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-
-- script: |
-    # outputs initialValue
-    echo ${{ variables.one }} 
-    echo $(one)
-  displayName: First variable pass
-- bash: echo "##vso[task.setvariable variable=one]secondValue"
-  displayName: Set new variable value
-- script: |
-    echo ${{ variables.one }} # outputs initialValue
-    echo $(one) # outputs secondValue
-  displayName: Second variable pass
+stages:
+- stage:
+  jobs:
+  - job:
+    steps:
+    - script: echo my stuff is $(one) amnd $(environ)
