--- a/yamlDemo.yml
+++ b/yamlDemo.yml
@@ -18,4 +18,4 @@ stages:
   jobs:
   - job:
     steps:
-    - script: echo my stuff is $(variables.one) and $(environ)
+    - script: echo my stuff is $(one) and $(environ)
