--- a/yamlDemo.yml
+++ b/yamlDemo.yml
@@ -13,9 +13,26 @@ variables:
   one: initialValue
   environ: It's a dev environ
 
+# stages:
+# - stage: build
+#   jobs:
+#   - job:
+#     steps:
+#     - script: echo my stuff is $(one) and $(environ)
+
 stages:
-- stage: build
+- stage: Build
+#add a jobs section and the first job will hold the steps(Tasks)
+#jobs holds a list of job, job, job,....
   jobs:
-  - job:
+  - job: Job1
+    #step and task mean the same thing.
     steps:
-    - script: echo my stuff is $(one) and $(environ)
+    - script: echo Job 1 - Hello, $(environ)!
+      displayName: '1 -Run a one-line script'
+
+    # a multiline script
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+        echo See https://aka.ms/yaml
+      displayName: 'Run a multi-line script'
