--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -3,8 +3,17 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+# trigger:
+# - main
+pr: none
 trigger:
-- main
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - demos/ReimbursementApi
+
 
 pool:
   vmImage: ubuntu-latest
