Update yamlDemo2.yml for Azure Pipelines

--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -18,7 +18,7 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-# steps:
+steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
