--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -29,8 +29,9 @@ jobs:
   - script: |
       echo Add other tasks to build, test, and deploy your project.
       echo My name is Earl!
-      displayName: 'Run a multi-line script'
+    displayName: 'Run a multi-line script'
 - job: job2
+  dependsOn: job1
   steps:
   - script: echo This is job2
     displayName: 'Run a one-line script'
