--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -21,20 +21,60 @@ pool:
   vmImage: ubuntu-latest
 
 
-jobs:
-- job: job1
-  steps:
-  - script: echo Hello, world!
-    displayName: 'Run a one-line script'
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-      echo My name is Earl!
-    displayName: 'Run a multi-line script'
-- job: job2
-  dependsOn: job1
-  steps:
-  - script: echo This is job2
-    displayName: 'Run a one-line script'
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-    displayName: 'Run a multi-line script'
+stages:
+- stage: build
+#jobs run in parallel (asynchronously)
+  jobs:
+  - job: build.job1
+    steps:
+    - script: echo Hello, world!
+      displayName: 'Run a one-line script'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+        echo My name is Earl!
+      displayName: 'Run a multi-line script'
+  - job: build.job2
+    dependsOn: job1
+    steps:
+    - script: echo This is job2
+      displayName: 'Run a one-line script'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+      displayName: 'Run a multi-line script'
+
+- stage: test
+  jobs:
+  - job: test.job1
+    steps:
+    - script: echo Hello, world!
+      displayName: 'Run a one-line script'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+        echo My name is Earl!
+      displayName: 'Run a multi-line script'
+  - job: test.job2
+    dependsOn:
+    steps:
+    - script: echo This is job2
+      displayName: 'Run a one-line script'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+      displayName: 'Run a multi-line script'
+- stage: deploy
+  jobs:
+  - job: deploy\.job1
+    steps:
+    - script: echo Hello, I\'m deploy job1!
+      displayName: 'deploy stage'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+        echo My name is Earl!
+      displayName: 'Run a multi-line script'
+  - job: deploy\.job2
+    dependsOn:
+    steps:
+    - script: echo This is deplopy.job2
+      displayName: 'Run a one-line script'
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+      displayName: 'Run a multi-line script'
