Update yamlDemo2.yml for Azure Pipelines

--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -16,28 +16,29 @@ trigger:
     include:
     - demos/ReimbursementApi
 
-
 pool:
   vmImage: ubuntu-latest
 
-
+#stages run sequentially
 stages:
 - stage: build
 #jobs run in parallel (asynchronously)
   jobs:
   - job: build_job1
     steps:
+    #a script is a task , which is tha smallests unit of the pipeline
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
     - script: |
         echo Add other tasks to build, test, and deploy your project.
         echo My name is Earl!
       displayName: 'Run a multi-line script'
-  - job: build_job2
+  - job: build_job2 # yo can give names to each unit
+  # use dependsOn to force one job to wait till another job is finished.
     dependsOn: build_job1
     steps:
     - script: echo This is job2
-      displayName: 'Run a one-line script'
+      displayName: 'Run a one-line script' #you can give a name that will show in the lest hand panel in the build screen...
     - script: |
         echo Add other tasks to build, test, and deploy your project.
       displayName: 'Run a multi-line script'
@@ -61,6 +62,7 @@ stages:
         echo Add other tasks to build, test, and deploy your project.
       displayName: 'Run a multi-line script'
 - stage: deploy
+  dependsOn: 
   jobs:
   - job: deploy_job1
     steps:
@@ -71,7 +73,7 @@ stages:
         echo My name is Earl!
       displayName: 'Run a multi-line script'
   - job: deploy_job2
-    dependsOn:
+    dependsOn: test_job1
     steps:
     - script: echo This is deplopy.job2
       displayName: 'Run a one-line script'
