--- a/yamlDemo2.yml
+++ b/yamlDemo2.yml
@@ -62,7 +62,7 @@ stages:
         echo Add other tasks to build, test, and deploy your project.
       displayName: 'Run a multi-line script'
 - stage: deploy
-  dependsOn: 
+  dependsOn: build
   jobs:
   - job: deploy_job1
     steps:
@@ -73,7 +73,7 @@ stages:
         echo My name is Earl!
       displayName: 'Run a multi-line script'
   - job: deploy_job2
-    dependsOn: test_job1
+    dependsOn: deploy_job1
     steps:
     - script: echo This is deplopy.job2
       displayName: 'Run a one-line script'
