Update reimburementOfficial.yml for Azure Pipelines

--- a/reimburementOfficial.yml
+++ b/reimburementOfficial.yml
@@ -91,7 +91,7 @@ stages:
 
 #publish the app
 - stage: publish
-  dependsOn: build
+  dependsOn: test
   jobs:
   - job: publish_the_app
     steps:
