adds 1 measly insignificant test of ApprovalDto instantiation

--- a/demos/ReimbursementApi/Tests.ReimbursementApp/Tests.ReimbursementApp.csproj
+++ b/demos/ReimbursementApi/Tests.ReimbursementApp/Tests.ReimbursementApp.csproj
@@ -21,4 +21,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RepositoryAccessLayer\RepositoryAccessLayer.csproj" />
+    <ProjectReference Include="..\ModelsLayer\ModelsLayer.csproj" />
+  </ItemGroup>
+
 </Project>
