adds Secret management with a Secrets.json file

--- a/demos/ReimbursementApi/ApiLayer/ApiLayer.csproj
+++ b/demos/ReimbursementApi/ApiLayer/ApiLayer.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>59a9d2dc-84d4-4b35-bc87-f4d47db5a237</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
