--- a/demos/ReimbursementApi/Tests.ReimbursementApp/Tests.ReimbursementApp.csproj
+++ b/demos/ReimbursementApi/Tests.ReimbursementApp/Tests.ReimbursementApp.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RepositoryAccessLayer\RepositoryAccessLayer.csproj" />
     <ProjectReference Include="..\ModelsLayer\ModelsLayer.csproj" />
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
   </ItemGroup>
 
 </Project>
