Create AssociateDemo Folder, AssociateDemoUi

--- a/demos/AssociateDemo/EFAPI/EFAPI/appsettings.json
+++ b/demos/AssociateDemo/EFAPI/EFAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "*****CONNECTIONSTRING*****"
+    "DefaultConnection": "***CONNECTIONSTRING***"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Domain": "***DOMAIN***",
+    "Audience": "***IDENTIFIER/AUDIENCE***"
+  },
+
   "AllowedHosts": "*"
 }
